crates/utils/re_arrow_util/src/snapshots/re_arrow_util__transform__test__add_one_to_leaves.snap
---
source: crates/utils/re_arrow_util/src/transform.rs
expression: "format!(\"{}\", DisplayRB(result.clone()))"
---
┌─────────────────────────────────────────────────────┐
│ col                                                 │
│ ---                                                 │
│ type: nullable List[FixedSizeList[nullable f64; 2]] │
╞═════════════════════════════════════════════════════╡
│ [[1.0, 1.0], [43.0, 43.0]]                          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ []                                                  │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ null                                                │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [[8.0, null], [8.0, 8.0]]                           │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [[18.0, 18.0]]                                      │
└─────────────────────────────────────────────────────┘
