crates/utils/re_arrow_util/src/snapshots/re_arrow_util__transform__test__flatten_multiple_elements.snap
---
source: crates/utils/re_arrow_util/src/transform.rs
expression: "format!(\"{}\", DisplayRB(result.clone()))"
---
┌───────────────────────────────────┐
│ col                               │
│ ---                               │
│ type: nullable List[nullable i32] │
╞═══════════════════════════════════╡
│ [1, 2, 3, 4]                      │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [5, null, 6, 7, 8]                │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ []                                │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [9]                               │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ null                              │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [10, 11]                          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [32, 33, 34]                      │
└───────────────────────────────────┘
