crates/utils/re_arrow_util/src/snapshots/re_arrow_util__transform__test__replace_nulls.snap
---
source: crates/utils/re_arrow_util/src/transform.rs
expression: "format!(\"{}\", DisplayRB(result.clone()))"
---
┌────────────────────────────────────────────┐
│ col                                        │
│ ---                                        │
│ type: nullable List[FixedSizeList[f64; 2]] │
╞════════════════════════════════════════════╡
│ [[0.0, 0.0], [42.0, 42.0]]                 │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ []                                         │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ null                                       │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [[7.0, 1337.0], [7.0, 7.0]]                │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [[17.0, 17.0]]                             │
└────────────────────────────────────────────┘
